--- a/src/main/resources/templates/keiji.html
+++ b/src/main/resources/templates/keiji.html
@@ -14,6 +14,20 @@
     <a href="/keiji/step2">ログインユーザ名をGETで取得(Sample3-2)</a>
   </p>
 
+  <p>
+  <form action="/lec02" method="post">
+    <input type="text" name="usercomment" />
+    <input type="submit" value="書き込み">
+  </form>
+  </p>
+
+  <p th:if="${comment}">
+    Hi [[${comment}]]
+  </p>
+
+
+
+
 
 </body>
 
