--- a/src/main/resources/templates/keiji.html
+++ b/src/main/resources/templates/keiji.html
@@ -7,11 +7,11 @@
 </head>
 
 <body>
-  <h1>Authorized! [[${login_user}]]</h1>
+  <h1>掲示板へようこそ! </h1>
   <a href="/logout">ログアウト</a>
 
   <p>
-    <a href="/keiji/step2">ログインユーザ名をGETで取得(Sample3-2)</a>
+    <a href="/keiji/step2">更新</a>
   </p>
 
   <p th:if="${comment}">
