コメント削除ページの実装

--- a/src/main/resources/templates/keiji.html
+++ b/src/main/resources/templates/keiji.html
@@ -11,7 +11,11 @@
   <a href="/logout">ログアウト</a>
 
   <p>
-    <a href="/keiji/step2">更新</a>
+    <a href="keiji/update">更新</a>
+  </p>
+
+  <p>
+    <a href="/keiji/admin">管理者ページ</a>
   </p>
 
   <p th:if="${comment}">
@@ -24,17 +28,11 @@
   </p>
 
   <p>
-  <form action="/lec02" method="post">
+  <form action="/keiji/comment" method="post">
     <input type="text" name="userComment" />
     <input type="submit" value="書き込み">
   </form>
   </p>
-
-  削除するコメント番号
-  <form th:action="@{/delete}" method="post">
-    <input type="number" name="number" />
-    <input type="submit" value="削除"><input type="reset" value="リセット">
-  </form>
 
 </body>
 
