権限の追加

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -17,20 +17,22 @@
     <a href="/keiji">掲示板に戻る</a>
   </p>
 
-  削除するコメント番号
-  <form th:action="@{/admin/delete}" method="post">
-    <input type="number" name="number" />
-    <input type="submit" value="削除"><input type="reset" value="リセット">
-  </form>
+  <tbody sec:authorize="hasRole('ROLE_ADMIN')">
+    削除するコメント番号
+    <form th:action="@{/admin/delete}" method="post">
+      <input type="number" name="number" />
+      <input type="submit" value="削除"><input type="reset" value="リセット">
+    </form>
 
-  <p th:if="${comment}">
-  <div th:each="comment,stat:${comment}">
-    <tr>
-      [[${comment.number}]] [[${comment.user}]] [[${comment.userComment}]]
-      <br>削除しました
-    </tr>
-  </div>
-  </p>
+    <p th:if="${comment}">
+    <div th:each="comment,stat:${comment}">
+      <tr>
+        [[${comment.number}]] [[${comment.user}]] [[${comment.userComment}]]
+        <br>削除しました
+      </tr>
+    </div>
+    </p>
+  </tbody>
 
 </body>
 
