ロールの実装とバグの修正

--- a/src/main/resources/templates/keiji.html
+++ b/src/main/resources/templates/keiji.html
@@ -11,7 +11,7 @@
   <a href="/logout">ログアウト</a>
 
   <p>
-    <a href="keiji/update">更新</a>
+    <a href="/keiji/update">更新</a>
   </p>
 
   <tbody sec:authorize="hasRole('ROLE_ADMIN')">
