--- a/src/main/resources/templates/keiji.html
+++ b/src/main/resources/templates/keiji.html
@@ -25,10 +25,12 @@
   <div th:each="comment,stat:${comment}">
     <tr>
       [[${comment.number}]] [[${comment.user}]] [[${comment.userComment}]]
+      [[${comment.good}]]
       <form action="/keiji/good" method="post">
-        <input type="text" name="userComment" />
+        <input type="hidden" name="num" th:value="${comment.number}" />
         <input type="submit" value="いいね">
-      </form><br>
+      </form>
+      <br>
       ==================================================<br>
     </tr>
   </div>
