管理者ページでのコメント表示

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -17,6 +17,15 @@
     <a href="/keiji">掲示板に戻る</a>
   </p>
 
+  <p th:if="${comment}">
+  <div th:each="comment,stat:${comment}">
+    <tr>
+      [[${comment.number}]] [[${comment.user}]] [[${comment.userComment}]]
+      [[${comment.good}]]
+    </tr>
+  </div>
+  </p>
+
   <tbody sec:authorize="hasRole('ROLE_ADMIN')">
     削除するコメント番号
     <form th:action="@{/admin/delete}" method="post">
@@ -24,10 +33,10 @@
       <input type="submit" value="削除"><input type="reset" value="リセット">
     </form>
 
-    <p th:if="${comment}">
-    <div th:each="comment,stat:${comment}">
+    <p th:if="${deleteComment}">
+    <div th:each="comment,stat:${deleteComment}">
       <tr>
-        [[${comment.number}]] [[${comment.user}]] [[${comment.userComment}]]
+        [[${deleteComment.number}]] [[${deleteComment.user}]] [[${deleteComment.userComment}]]
         <br>削除しました
       </tr>
     </div>
