--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -26,7 +26,7 @@
   </div>
   </p>
 
-  <tbody sec:authorize="hasRole('ROLE_ADMIN')">
+  <tbody sec:authorize="hasAnyRole('ROLE_ADMIN', 'ROLE_MASTER')">
     削除するコメント番号
     <form th:action="@{/admin/delete}" method="post">
       <input type="number" name="number" />
