管理者追加機能と管理者ページの変更

--- a/src/main/resources/templates/modification.html
+++ b/src/main/resources/templates/modification.html
@@ -70,6 +70,13 @@
   </tbody>
 
   <tbody sec:authorize="hasRole('ROLE_MASTER')">
+    追加する管理者情報を入力してください
+    <form action="/modify/addAdmin" method="post">
+      <input type="text" id="username" name="username" class="form-control" placeholder="ユーザ名"><br>
+      <input type="password" id="password" name="password" class="form-control" placeholder="パスワード">
+      <br><input type="submit" value="登録" />
+    </form>
+
     <p th:if="${adminUserInfo}">
       ユーザー一覧
     <table border="1">
