--- a/src/main/resources/templates/thread.html
+++ b/src/main/resources/templates/thread.html
@@ -25,7 +25,7 @@
   <p th:if="${errorMessage}">
     [[${errorMessage}]]
   </p>
-
+  スレッド一覧
   <p th:if="${thread}">
   <div th:each="thread,stat:${thread}">
     <tr>
