--- a/src/main/resources/templates/modification.html
+++ b/src/main/resources/templates/modification.html
@@ -11,11 +11,12 @@
 
   <p>
     <a href="/logout">ログアウト</a>
-  </p>
+  </p><br>
 
   <p th:if="${loginUser}">
   <div th:each="userInfo,stat:${loginUser}">
     <tr>
+      ログイン中のユーザー
       [[${loginUser.name}]] [[${loginUser.role}]]
     </tr>
   </div>
@@ -24,7 +25,7 @@
     <input type="hidden" name="number" th:value="${loginUser.number}" />
     <input type="text" id="username" name="username" class="form-control" placeholder="ユーザ名">
     <input type="submit" value="名前変更" />
-  </form>
+  </form><br>
 
   <p th:if="${changeMessage}">
     [[${changeMessage}]]
@@ -72,11 +73,13 @@
   </tbody>
 
   <tbody sec:authorize="hasRole('ROLE_MASTER')">
-    追加する管理者情報を入力してください
+    ADMINロールを所持する管理者を追加します、ユーザー名とパスワードを入力してください
     <form action="/modify/addAdmin" method="post">
+      ユーザー名
       <input type="text" id="username" name="username" class="form-control" placeholder="ユーザ名"><br>
-      <input type="password" id="password" name="password" class="form-control" placeholder="パスワード">
-      <br><input type="submit" value="登録" />
+      パスワード
+      <input type="password" id="password" name="password" class="form-control" placeholder="パスワード"><br>
+      <input type="submit" value="登録" />
     </form>
 
     <p th:if="${adminUserInfo}">
