--- a/src/main/resources/templates/keiji.html
+++ b/src/main/resources/templates/keiji.html
@@ -33,6 +33,10 @@
   </div>
   </p>
 
+  <p th:if="${errorMessage}">
+    [[${errorMessage}]]
+  </p>
+
   <p th:if="${comment}">
   <div th:each="comment,stat:${comment}">
     <br>
