--- a/src/main/resources/templates/modification.html
+++ b/src/main/resources/templates/modification.html
@@ -25,7 +25,7 @@
     <input type="hidden" name="number" th:value="${loginUser.number}" />
     <input type="text" id="username" name="username" class="form-control" placeholder="ユーザ名">
     <input type="submit" value="名前変更" />
-  </form><br>
+  </form>
 
   <p th:if="${changeMessage}">
     [[${changeMessage}]]
@@ -82,6 +82,10 @@
       <input type="submit" value="登録" />
     </form>
 
+    <p th:if="${errorMessage}">
+      [[${errorMessage}]]
+    </p>
+
     <p th:if="${adminUserInfo}">
       ユーザー一覧
     <table border="1">
@@ -117,10 +121,6 @@
         </td>
       <tr>
     </table>
-    </p>
-
-    <p th:if="${errorMessage}">
-      [[${errorMessage}]]
     </p>
 
     <p th:if="${deleteUserInfo}">
